[metadata]
name = unbox
version = 0.0.8
url = https://github.com/i2mint/unbox
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Finding imports in code
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = unbox

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	findimports
	dol
	importlib_resources

[options.data_files]
data/standard_lib_names = unbox/data/standard_lib_names

