[metadata]
name = unbox
version = 0.1.0
url = https://github.com/i2mint/unbox
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Finding imports in code
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = unbox

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	findimports
	dol
	importlib_resources
	config2py
	py2store

[options.data_files]
data =
	unbox/data/dflt_import_to_install_name_map.json
	unbox/data/standard_lib_names/2.7.csv
	unbox/data/standard_lib_names/3.5.csv
	unbox/data/standard_lib_names/3.6.csv
	unbox/data/standard_lib_names/3.7.csv
	unbox/data/standard_lib_names/3.8.csv
	unbox/data/standard_lib_names/3.9.csv


